@@ -50,6 +50,7 @@
 - fix fix map entry duplicate offset detection.
 - probe each nfs version in turn for singleton mounts.
 - wait for master map available at start.
+- add master read wait option.
 
 25/07/2012 autofs-5.0.7
 =======================
